--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <nav>
+                <h1>PC Build</h1>
+            <ul>
+                <li>Home |</li>
+                <li>Product |</li>
+                <li>About Us |</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </div>
     <p><h1>MONITORS</h1></p>
     <div class="products">
         <div class="box">
@@ -61,6 +72,7 @@
 
 </body>
 </html>
+
 
 
 
