--- a/index3.html
+++ b/index3.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <nav>
+                <h1>PC Build</h1>
+            <ul>
+                <li>Home |</li>
+                <li>Product |</li>
+                <li>About Us |</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </div>
     <div>
         <P>
             <h1 style="margin-top: 20px;">RAM'S</h1>
@@ -61,4 +72,5 @@
         </nav>
     </div>    
     </body>
+
 </html>
