--- a/index9.html
+++ b/index9.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <nav>
+                <h1>PC Build</h1>
+            <ul>
+                <li>Home |</li>
+                <li>Product |</li>
+                <li>About Us |</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </div>
     <div>
          <p>
             <h1 style="margin-top: 20px;">SSD'S </h1>
@@ -64,4 +75,5 @@
         </nav>
     </div>
 </body>
+
 </html>
