--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </div>
-    <p><h1>MONITORS</h1></p>
+    <p><h1 class = "color">MONITORS</h1></p>
     <div class="products">
         <div class="box">
             <img src="Screenshot 2025-12-16 223714.png " width="270px" height="200px">
@@ -72,6 +72,7 @@
 
 </body>
 </html>
+
 
 
 
