--- a/index3.html
+++ b/index3.html
@@ -20,7 +20,7 @@
     </div>
     <div>
         <P>
-            <h1 style="margin-top: 20px;">RAM'S</h1>
+            <h1 style="margin-top: 20px;"  class = "color">RAM'S</h1>
         </P>
 
 
@@ -74,3 +74,4 @@
     </body>
 
 </html>
+
