--- a/index5.html
+++ b/index5.html
@@ -20,7 +20,7 @@
     </div>
     <div>
          <p>
-            <h1 style="margin-top: 20px;">MOTHERBOARDS</h1>
+            <h1 style="margin-top: 20px;" class = "color">MOTHERBOARDS</h1>
         </p> 
         <br>
         
@@ -78,3 +78,4 @@
 </body>
 
 </html>
+
