--- a/index6.html
+++ b/index6.html
@@ -20,7 +20,7 @@
     </div>
     <div>
          <p>
-            <h1 style="margin-top: 20px;">GRAPHICS CARD</h1>
+            <h1 style="margin-top: 20px;" class = "color">GRAPHICS CARD</h1>
         </p> 
         <br>
         
@@ -77,3 +77,4 @@
 </body>
 
 </html>
+
