--- a/index7.html
+++ b/index7.html
@@ -20,7 +20,7 @@
     </div>
     <div>
          <p>
-            <h1 style="margin-top: 20px;">CABINETS </h1>
+            <h1 style="margin-top: 20px;" class = "color">CABINETS </h1>
         </p> 
         <br>
         <div class="box5">
@@ -77,3 +77,4 @@
 </body>
 
 </html>
+
