--- a/index8.html
+++ b/index8.html
@@ -20,7 +20,7 @@
     </div>
     <div>
          <p>
-            <h1 style="margin-top: 20px;">SMPS</h1>
+            <h1 style="margin-top: 20px;" class = "color">SMPS</h1>
         </p> 
         <br>
         <div class="box7">
@@ -77,3 +77,4 @@
 </body>
 
 </html>
+
