--- a/index9.html
+++ b/index9.html
@@ -20,7 +20,7 @@
     </div>
     <div>
          <p>
-            <h1 style="margin-top: 20px;">SSD'S </h1>
+            <h1 style="margin-top: 20px;" class = "color">SSD'S </h1>
         </p> 
         <br>
         <div class="box6">
@@ -77,3 +77,4 @@
 </body>
 
 </html>
+
