--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ Overall, a PC is a powerful and essential tool that enhances productivity, learn
         <h1 class="purchase-title">Purchases</h1>
         <a href="index2.html" class="purchase-sub"> 1. MONITORS</a>
 
-        <a href="index3.html" class="purchase2-sub">2. RAM'S</a>
-        <a href="index4.html" class="purchase3-sub">3. PROCESSOR'S</a>
-        <a href="index5.html" class="purchase4-sub">4. MOTHERBOARDS</a>
-        <a href="index6.html" class="purchase5-sub">5. GRAPHICS CARD</a>
-        <a href="index7.html" class="purchase6-sub">6. CABINETS</a>
-        <a href="index8.html" class="purchase7-sub">7. SMPS</a>
-        <a href="index9.html" class="purchase8-sub">8. SSD'S</a>
+        <a href="index3.html" class="purchase-sub">2. RAM'S</a>
+        <a href="index4.html" class="purchase-sub">3. PROCESSOR'S</a>
+        <a href="index5.html" class="purchase-sub">4. MOTHERBOARDS</a>
+        <a href="index6.html" class="purchase-sub">5. GRAPHICS CARD</a>
+        <a href="index7.html" class="purchase-sub">6. CABINETS</a>
+        <a href="index8.html" class="purchase-sub">7. SMPS</a>
+        <a href="index9.html" class="purchase-sub">8. SSD'S</a>
 
 
     </div>
@@ -107,3 +107,4 @@ Overall, a PC is a powerful and essential tool that enhances productivity, learn
     </div>
 </body>
 </html>
+
