--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PC BUILDING</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/pc.png">
+    <link rel="icon" href="pc.png">
 </head>
 <body>
      <div class="header">
@@ -107,4 +107,5 @@ Overall, a PC is a powerful and essential tool that enhances productivity, learn
     </div>
 </body>
 </html>
+
 
